# run

./: .gitignore  ADR.md  AGENTS.md  CHANGELOG.md  CODEBASE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  install.ps1  install.sh  plan.md
.github/workflows/: ci.yml
scripts/: pre-push.sh
src/: cli.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  output.rs  runner.rs  update.rs  validators.rs
src/detectors/: conflict_tests.rs  custom.rs  dart.rs  deno.rs  dotnet.rs  elixir.rs  go.rs  java.rs  just.rs  make.rs  mod.rs  monorepo.rs  node.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  tests.rs  zig.rs
tests/: cli_tests.rs  custom_runner_test.rs  integration_test.rs  integration_tests.rs  node_builtin_test.rs  proptest_tests.rs
tests/fixtures/conflicting-lockfiles/: package.json
tests/fixtures/elixir-mix/: mix.exs
tests/fixtures/go-mod/: go.mod
tests/fixtures/nested/deep/project/: package.json
tests/fixtures/node-pnpm/: package.json
tests/fixtures/php-composer/: composer.json
tests/fixtures/python-pipenv/: Pipfile
tests/fixtures/ruby-rake/: Rakefile
tests/fixtures/zig/: build.zig
