[package]
name = "run-cli"
version = "0.5.0"
edition = "2021"
authors = ["Verseles"]
description = "Universal task runner for modern development - automatically detects and runs project commands"
documentation = "https://github.com/verseles/run"
homepage = "https://github.com/verseles/run"
repository = "https://github.com/verseles/run"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["cli", "task-runner", "npm", "yarn", "pnpm", "cargo", "make"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"

# Async runtime and HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Versioning
semver = "1.0"

# Terminal colors and formatting
owo-colors = "4.1"

# File system utilities
dirs = "5.0"
walkdir = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# For which command detection
which = "7.0"

# DNS resolver for update checks (Termux compatibility)
hickory-resolver = "0.25"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.5"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
